<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/main_add_card_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:onClick="addCard"
            android:text="@string/main_add_card_btn_txt"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/main_del_card_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:onClick="delCard"
            android:text="@string/main_del_card_btn_txt"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/main_edit_card_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:onClick="editCard"
            android:text="@string/main_edit_card_btn_txt"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/main_list_cards_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:onClick="listCards"
            android:text="@string/main_list_cards_btn_txt"
            android:textAllCaps="false" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_priority_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/main_category_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/main_ques_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/main_ans_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ems="10"
                android:hint="@string/main_ans_et_hint"
                android:imeOptions="actionGo"
                android:inputType="textMultiLine|text"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/main_ans_btn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/button"
                android:textAllCaps="false"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/main_ans_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/main_desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
